--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ timezone: America/Los_Angeles
 
 name: lloyd's blog
 description: The (mostly) technical blog of Lloyd Hilaiel.
-url: http://127.0.0.1:4000
+url: http://lloyd.github.io/lloyd.io
 baseurl: /
 
 markdown: rdiscount
